--- a/ARMdps/Views/Home/Index.cshtml
+++ b/ARMdps/Views/Home/Index.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <div>
-    <div id="main_menu" style="display:flex; justify-content:space-around; padding: 1% 5% 2% 5%;">
+    <div id="main_menu" style="display:flex; justify-content:space-around; padding: 1% 5% 1% 5%; border-bottom:solid 1px ; border-bottom-color: #086F99">
         <div style="display:flex">
             <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle blue-button" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,84 +58,73 @@
                 </div>
             </div>
         </div>
+        <div style="display:flex">
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle blue-button" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Отчетность
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <button class="dropdown-item" href="#">Материалы за период</button>
+                    <button class="dropdown-item" href="#">Постатейный отчет</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-<div id="example" class="container">
+<div id="example" class="container" style="margin-top:1%">
 </div>
 
 
 
 @section Scripts
 {
-    <script type="text/javascript">
+<script type="text/javascript">
 
-    function clickUpdateTableBtn() {
-        $.ajax({
-        type: "POST",
-        url: '@Url.Action("GetUpdateTable", "Update")',
-        success: function (data) {
-            updateTable(data)
-        },
-        error: function () {
-            alert('Error occured');
+
+        //Таблицы
+
+        function updateTable(tableHtml) {
+        $('#example').html(tableHtml);
         }
-    });
-    }
 
-    function clickDepartmentTableBtn() {
-        $.ajax({
-        type: "POST",
-        url: '@Url.Action("GetDepartmentTable", "Department")',
-        success: function (data) {
-            updateTable(data)
-        },
-        error: function () {
-            alert('Error occured');
+        function updateForm(formHtml) {
+        $('#example').html(formHtml);
         }
-    });
-    }
 
-    function clickARMUsersTableBtn() {
-        $.ajax({
-        type: "POST",
-        url: '@Url.Action("GetARMUserTable", "ARMUser")',
-        success: function (data) {
-            updateTable(data)
-        },
-        error: function () {
-            alert('Error occured');
+        //Версии ПО
+        function clickUpdateTableBtn(){
+            sendAjaxNotData('@Url.Action("GetUpdateTable", "Update")',tableSuccess, tableError,"POST");
         }
-    });
-    }
+        //Подразделения
+        function clickDepartmentTableBtn() {
+            
+            sendAjaxNotData('@Url.Action("GetDepartmentTable", "Department")',tableSuccess, tableError, "POST");            
+        }
+        //Пользователи
+        function clickARMUsersTableBtn() {
+            sendAjaxNotData('@Url.Action("GetARMUserTable", "ARMUser")', tableSuccess, tableError, "POST")
+        }
 
-    function updateTable(tableHtml) {
-    $('#example').html(tableHtml);
-    }
+        function formSuccess(data) {
+        updateForm(data);
+        }
 
-
-    function clickRegionBtn(regionId) {
+        function formError() {
+        alert("Error occured");
+        }        
+        
+        //Редактирование учетных данных
+        function clickRegionBtn(regionId) {
         console.log(regionId);
-        $.ajax({
-            type: "POST",
-            data: ({ id: regionId }),
-            url: '@Url.Action("GetRegionForm", "Region")',
-        success: function (data) {
-            updateForm(data);
-        },
-        error: function () {
-            alert('Error occured');
+        sendAjaxData(({ id: regionId }), '@Url.Action("GetRegionForm", "Region")', formSuccess, formError, "POST");
         }
-    });
-    }
 
-    function updateForm(formHtml) {
-    $('#example').html(formHtml);
-    }
+        
 
 
-    //Скрипт для выпадающего списка(чтобы всегда отображался)
-    $(document).ready(function () {
-    $(".dropdown-toggle").dropdown();
-    });
-    </script>
+        //Скрипт для выпадающего списка(чтобы всегда отображался)
+        $(document).ready(function () {
+        $(".dropdown-toggle").dropdown();
+        });
+</script>
 }
