--- a/ARMdps/wwwroot/css/site.css
+++ b/ARMdps/wwwroot/css/site.css
@@ -91,3 +91,15 @@ body {
     background-color: #FFFFFF;
     color: #086F99;
 }
+button:focus,
+button:active{
+    background-color: white;
+    border-bottom:2px solid red;
+}
+.main_menus {
+    display: flex;
+    justify-content: space-around;
+    padding: 1% 5% 1% 5%;
+    border-bottom: solid 1px;
+    border-bottom-color: #086F99
+}
