--- a/ARMdps/Views/ARMUser/_ARMUserTable.cshtml
+++ b/ARMdps/Views/ARMUser/_ARMUserTable.cshtml
@@ -10,7 +10,7 @@
 <div>
     <button class="blue-button" onclick="loadNewVersion">Новое подразделение</button>
 </div>
-<table id="aTable" class="cell-border" style="width:100%">
+<table id="aTable" class="cell-border" style="overflow:scroll; height:400px;">
     <thead style="background-color:#75BCFF;">
         <tr>
             <th>Фамилия</th>
